Next attempt to fix tooltip flickering problems (references #66 and #51)

--- a/public/css/grocy.css
+++ b/public/css/grocy.css
@@ -199,5 +199,5 @@ td {
 
 /* Third party component customizations - Popper.js */
 .tooltip {
-	pointer-events: auto;
+	pointer-events: none;
 }
